! Apparently, the Atom feed implementation was written around the time Atom 0.3 was out. Version 1.0 changes the modified tag to updated, and tagline to subtitle. Updated Wedge to use them. Also switched from summary tags to content tags, because as the name implies, summary should be for post extracts, not entire bodies. (Feed.php) ! Fixed RSS implementation bug: language should be specified in the language tag, rather than xml:lang (RSS is not proper XML so it doesn't officially understand that.) (Feed.php) * Added a comment about the fact that pubDate for items is for RSS 0.93 and RSS 2.0, thus it renders the RSS 0.92 feed invalid. (Not that I'm not planning to remove it anyway...) (Feed.php) * Top-level submenus are now horizontally aligned on their parent's label, rather than their icon. I guess it's something that could warrant a discussion, but apparently it's not a fascinating subject, so I'll just leave it at that. I probably should rewrite the menu code to make it simpler at this point. (script.js) ! Updated Trophy icon (used in the stats area) to fit in the same dimensions as the other icons on the page. Approximately, at least. (stats_posters.gif) ! Report button had too much padding on the right. (sections.css)

--- a/Themes/default/skins/sections.css
+++ b/Themes/default/skins/sections.css
@@ -475,6 +475,7 @@ ul.quickbuttons extends ul.reset
 	.report_button
 		background-image: url($images/report.png)
 		background-position: 0 0
+		padding-left: 20px
 
 	.profile_button
 		background-image: url($images/icons/profile_sm.gif)
